<resources>
    <string name="app_name"> BBump</string>
    <string name="button">
        Planowany dzień Porodu

    </string>
    <string name="button2">Informacje o ciąży</string>
    <string name="button3">Wprowadź Dane</string>
    <string name="wybierz_co_chcesz_zobaczy">Wybierz co chcesz zobaczyć</string>
    <string name="title3">USTAW INFORMACJE NA TEMAT CIĄŻY</string>
    <string name="box1">MALE</string>
    <string name="box2">FEMALE</string>
    <string-array name="year">
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>
    <string-array name="day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="title_activity_pregnancy_info">pregnancyInfo</string>

    <string-array name="options">
        <item>Mamusiu mam apetyt na ...</item>
        <item>Mamusiu chcę z Tobą poćwiczyć!</item>
        <item>Hej Mamo! spójrz jak teraz wyglądam!</item>
    </string-array>
    <string name="action_settings">Ustawienia</string>
</resources>
