<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >


    <Button
        android:id="@+id/button4"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="20dp"
        android:background="@color/main_background"
        android:text="@string/button2"
        android:onClick="goToBabyInformation"
        app:layout_constraintBottom_toTopOf="@+id/wprowadzanie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wiek" />

    <Button
        android:id="@+id/wprowadzanie"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="164dp"
        android:background="@color/main_background"
        android:text="@string/button3"
        android:onClick="createUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/wiek"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="20dp"
        android:background="@color/main_background"
        android:text="@string/button"
        android:onClick="check_born"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="283dp"
        android:layout_height="200dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="22dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_baby" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="197dp"
        android:layout_height="36dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="22dp"
        android:text="@string/wybierz_co_chcesz_zobaczy"
        app:layout_constraintBottom_toTopOf="@+id/wiek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="34dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wprowadzanie" />

    <Button
        android:id="@+id/button2"
        android:layout_width="151dp"
        android:layout_height="54dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="17dp"
        android:onClick="readUserFromDb"
        android:text="wybierz użytkownika"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wprowadzanie"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="122dp"
        android:layout_height="27dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="7dp"
        android:entries="@array/month"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wprowadzanie"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:text="text"
        android:id="@+id/distance"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:singleLine="false"
        android:textSize="50dp" />


</android.support.constraint.ConstraintLayout>


